@@ -1,5 +1,13 @@
 2015-02-19  Natalia Portillo  <claunia@claunia.com>
 
+	* ParseTest.cs:
+	  Convert unix date to .net dates.
+	Array.Equals() does not compare array internals but object
+	  reference, implement substitute.
+	String.Substring() has a different API than Java, correct.
+
+2015-02-19  Natalia Portillo  <claunia@claunia.com>
+
 	* IssueTest.cs:
 	* plist-cil.test.csproj:
 	  Implement IssueTest.
